Minimal VM: FALSE was not declared in this scope

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • None
    • b04

      minimal build broken. Error output:

      $ make hotspot CONF=linux-x86_64-minimal-re
      Building target 'hotspot' in configuration 'linux-x86_64-minimal-release'
      In file included from /home/aoqi/jdk/src/hotspot/share/utilities/compilerWarnings.hpp:30:0,
                       from /home/aoqi/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/utilities/align.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/runtime/globals_shared.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/compiler/compiler_globals.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/runtime/globals.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/memory/allocation.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/classfile/classLoaderData.hpp:28,
                       from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:34:
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp: In member function 'bool FileMapInfo::fail(const char*, const char*)':
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp:383:65: error: 'FALSE' was not declared in this scope
         bool fail(const char* msg, const char* name) NOT_CDS_RETURN_(FALSE);
                                                                       ^
      /home/aoqi/jdk/src/hotspot/share/utilities/macros.hpp:119:40: note: in definition of macro 'NOT_CDS_RETURN_'
       #define NOT_CDS_RETURN_(code) { return code; }
                                              ^
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp: In member function 'bool FileMapInfo::check_paths(int, int, GrowableArray<char*>*)':
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp:386:69: error: 'FALSE' was not declared in this scope
                           GrowableArray<char*>* rp_array) NOT_CDS_RETURN_(FALSE);
                                                                           ^
      /home/aoqi/jdk/src/hotspot/share/utilities/macros.hpp:119:40: note: in definition of macro 'NOT_CDS_RETURN_'
       #define NOT_CDS_RETURN_(code) { return code; }
                                              ^
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp: In member function 'bool FileMapInfo::validate_boot_class_paths()':
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp:387:53: error: 'FALSE' was not declared in this scope
         bool validate_boot_class_paths() NOT_CDS_RETURN_(FALSE);
                                                           ^
      /home/aoqi/jdk/src/hotspot/share/utilities/macros.hpp:119:40: note: in definition of macro 'NOT_CDS_RETURN_'
       #define NOT_CDS_RETURN_(code) { return code; }
                                              ^
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp: In member function 'bool FileMapInfo::validate_app_class_paths(int)':
      /home/aoqi/jdk/src/hotspot/share/memory/filemap.hpp:388:76: error: 'FALSE' was not declared in this scope
         bool validate_app_class_paths(int shared_app_paths_len) NOT_CDS_RETURN_(FALSE);
                                                                                  ^
      /home/aoqi/jdk/src/hotspot/share/utilities/macros.hpp:119:40: note: in definition of macro 'NOT_CDS_RETURN_'
       #define NOT_CDS_RETURN_(code) { return code; }
      ...

            Assignee:
            Qi Ao
            Reporter:
            Qi Ao
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: