8226967: Minimal VM: FALSE was not declared in this scope

Reviewed-by: dholmes